--- a/src/app/components/pago-cuota-alumno/pago-cuota-alumno.component.html
+++ b/src/app/components/pago-cuota-alumno/pago-cuota-alumno.component.html
@@ -1,1 +1,159 @@
-<p>pago-cuota-alumno works!</p>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="../css/estilos.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@600&display=swap" rel="stylesheet"> 
+
+</head>
+<body style="background-color: #e5e5e5">
+    
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">         
+          <a class="navbar-brand" href="#"><img src="../../../assets/img/graduation-hat.png" alt="" style="height: 30px;"> Colegio IPSEL<i class="fas fa-graduation-cap"></i></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <h6 style="color: white;">Cuenta: Secretario</h6>
+            <form class="d-flex">
+              <button type="button" class="btn btn-outline-secondary" style="margin-left: 5px; margin-right: 5px;">Salir</button>
+            </form>
+            
+          </div>
+        </div>
+    </nav>
+      <br>
+
+   <div class="container">
+     <div class="row">
+        <div class="col-8">
+          <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingOne">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    Consultar
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <form>
+                        
+                          <legend>Ingrese DNI de alumno</legend>
+                          <div class="input-group mb-3">
+                            <input type="text" class="form-control" aria-label="Recipient's username" aria-describedby="button-addon2">
+                            <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
+                          </div>
+                      </form>
+                      <table class="table">
+                        <thead class="table-dark">
+                            <td>
+                                Nombre 
+                            </td>
+                            <td>
+                                Apellido
+                            </td>
+                            <td>
+                                Curso 
+                            </td>
+                            <td>
+                                Division
+                            </td>
+                            <td>
+                                Fecha Ultima cuota pagada 
+                            </td>
+                        </thead>
+                        <tbody>
+                            <td>
+                                Juan
+                            </td>
+                            <td>
+                                Perez
+                            </td>
+                            <td>
+                                2º 
+                            </td>
+                            <td>
+                                B
+                            </td>
+                            <td>
+                               12/5/2021 
+                            </td>
+                        </tbody>
+                      </table>
+                      
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    Registrar nuevo pago
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <form>
+                        
+                          <legend>Formulario de pago</legend>
+                          <div class="mb-3">
+                            <label for="disabledTextInput" class="form-label">Dni del alumno</label>
+                            <input type="text" id="disabledTextInput" class="form-control" placeholder="Disabled input">
+                          </div>
+                          <div class="mb-3">
+                            <label for="disabledSelect" class="form-label">Metodo de Pago</label>
+                            <select id="disabledSelect" class="form-select">
+                              <option>Efectivo</option>
+                              <option>Tarjeta</option>
+                              <option>Transferencia</option>
+                            </select>
+                          </div>
+                          <div class="mb-3">
+                            <label for="disabledSelect" class="form-label">Cuotas Pagadas</label>
+                            <select id="disabledSelect" class="form-select">
+                              <option>1</option>
+                              <option>2</option>
+                              <option>3</option>
+                            </select>
+                          </div>
+                          <div style="text-align: center;">
+                              <button type="submit" class="btn btn-primary">Registrar</button>
+                              <button type="submit" class="btn btn-primary">Limpiar</button>
+                          </div>
+                          
+                       
+                      </form>
+        </div>
+              </div>
+              
+            </div>  
+
+          </div>         
+          
+        </div>
+            <div class="col-4">
+                  <div class="list-group">
+
+                    <a href="#" class="list-group-item list-group-item-action">Subir Documentos</a>
+                    <a href="#" class="list-group-item list-group-item-action">Asistencia</a>
+                    <a href="#" class="list-group-item list-group-item-action">Generar Constancias</a>
+                    <a href="#" class="list-group-item list-group-item-action active" aria-current="true">Pagos</a>
+                  </div>
+                </div>
+    
+            </div>
+   </div>
+         
+              
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+
+</body>
+</html>
