Arreglo de errores 	modificado:     package-lock.json 	modificado:     src/app/app.component.css 	modificado:     src/app/app.component.html 	modificado:     src/app/app.module.ts 	modificado:     src/app/components/constancia-alumno-regular/constancia-alumno-regular.component.css 	modificado:     src/app/components/constancia-alumno-regular/constancia-alumno-regular.component.html 	modificado:     src/app/components/layout/footer/footer.component.css 	modificado:     src/app/components/layout/footer/footer.component.html 	modificado:     src/app/components/layout/header/header.component.html 	nuevo archivo:  src/app/components/layout/nav/nav.component.css 	nuevo archivo:  src/app/components/layout/nav/nav.component.html 	nuevo archivo:  src/app/components/layout/nav/nav.component.spec.ts 	nuevo archivo:  src/app/components/layout/nav/nav.component.ts 	modificado:     src/app/components/login/login.component.css 	modificado:     src/app/components/login/login.component.html 	modificado:     src/app/components/pago-cuota-alumno/pago-cuota-alumno.component.css 	modificado:     src/app/components/pago-cuota-alumno/pago-cuota-alumno.component.html

--- a/src/app/components/layout/footer/footer.component.html
+++ b/src/app/components/layout/footer/footer.component.html
@@ -1,1 +1,26 @@
-<p>footer works!</p>
+<footer class="footer-center footer-minimal" id="footer">
+    <div class="content">
+       <div class="container">
+           <div class="row footer-main">
+               <p class="footer-title" >CONTACTS info@school.com    (+02) 022 5566888    Skype school.name </p>
+              
+               <hr class="space xs" />
+               <div class="btn-group navbar-social">
+                   <div class="btn-group social-group">
+                       <a target="_blank" href="#"><i class="fa fa-facebook"></i></a>
+                       <a target="_blank" href="#"><i class="fa fa-twitter"></i></a>
+                       <a target="_blank" href="#"><i class="fa fa-instagram"></i></a>
+                       <a target="_blank" href="#"><i class="fa fa-youtube"></i></a>
+                   </div>
+               </div>
+           </div>
+           <div class="row copy-row">
+               <div class="col-md-12 copy-text">
+                   <div class="tag-row">
+                      
+                   </div>
+               </div>
+           </div>
+       </div>
+   </div>
+</footer>
