--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,44 @@
-<p>login works!</p>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@600&display=swap" rel="stylesheet"> 
+
+</head>
+<body id="bglogin">
+    <header><div class="navbar navbar-default over wide-area" role="navigation"> ... </div></header> 
+    <div class="container" id="fondo">
+        <div class="row">
+            <div class="col-12">
+                    <div style="color: #FCA311;"><a href="menuprincipal.html" style="text-decoration: none; color: #FCA311;">Pagina Principal</a> ►<a href="" style="text-decoration: none;color: #FCA311;">  Entrar al sitio</a></div>
+                    <br><br>
+                    <h1 style="color: white; text-shadow: yellow;">Acceder</h1>
+                    <br>
+                    <div class="col-5" id="login">
+                        <form>
+                            <div class="mb-3">
+                              <label for="exampleInputEmail1" class="form-label">Email address</label>
+                              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                              <div id="emailHelp" class="form-text" style="color: rgb(175, 173, 173);">We'll never share your email with anyone else.</div>
+                            </div>
+                            <div class="mb-3">
+                              <label for="exampleInputPassword1" class="form-label">Password</label>
+                              <input type="password" class="form-control" id="exampleInputPassword1">
+                            </div>
+                            <div class="mb-3 form-check">
+                              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                              <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                            </div>
+                            <button type="submit" class="btn btn-success" style="width: 100%;">Login</button>
+                        </form>
+                    </div>
+
+            </div>
+        </div>
+    </div>
+
+</body>
+</html>
