--- a/src/app/components/layout/nav/nav.component.html
+++ b/src/app/components/layout/nav/nav.component.html
@@ -1,12 +1,18 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="../img/graduation-hat.png" alt="" style="height: 30px;"> Colegio IPSEL<i class="fas fa-graduation-cap"></i></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      
-        <form class="d-flex">
-          <button type="button" class="btn btn-outline-secondary" style="margin-left: 5px; margin-right: 5px;">Login</button>
-        </form>
-    </div>
-</nav>
+<div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"><img src="../img/graduation-hat.png" alt="" style="height: 30px;"> Colegio IPSEL<i class="fas fa-graduation-cap"></i></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          
+            <form class="d-flex">
+              <button type="button" class="btn btn-outline-secondary" style="margin-left: 5px; margin-right: 5px;">Login</button>
+            </form>
+        </div>
+    </nav>
+</div>
+
+
+
+
