Mas errores con Login 	modificado:     src/app/app-routing.module.ts 	modificado:     src/app/app.component.html 	modificado:     src/app/components/layout/header/header.component.html 	modificado:     src/app/components/principal/principal.component.html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<div class="container main-container">
-
+<div>
       <app-header></app-header>
-      <router-outlet></router-outlet>
+      <router-outlet>
+          <app-principal></app-principal>
+      </router-outlet>
       <app-footer></app-footer>
-
 </div>
