--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -4,9 +4,8 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      
-        <form class="d-flex">
-          <button type="button" class="btn btn-outline-secondary" style="margin-left: 5px; margin-right: 5px;">Login</button>
-        </form>
+
+          <button type="submit" class="btn btn-outline-secondary" style="margin-left: 5px; margin-right: 5px;"><a [routerLink]="['login']">Login</a></button> 
+
     </div>
 </nav>
