--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -5,7 +5,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-          <button type="submit" class="btn btn-outline-secondary" style="margin-left: 5px; margin-right: 5px;"><a [routerLink]="['login']">Login</a></button> 
+          <button type="reset" class="btn btn-outline-secondary" style="margin-left: 5px; margin-right: 5px;"><a [routerLink]="['login']">Login</a></button> 
 
     </div>
 </nav>
