Links Erroneos, vinculacion 	modificado:     src/app/app-routing.module.ts 	modificado:     src/app/app.module.ts 	modificado:     src/app/components/constancia-alumno-regular/constancia-alumno-regular.component.html 	nuevo archivo:  src/app/components/construccion/construccion.component.css 	nuevo archivo:  src/app/components/construccion/construccion.component.html 	nuevo archivo:  src/app/components/construccion/construccion.component.spec.ts 	nuevo archivo:  src/app/components/construccion/construccion.component.ts 	modificado:     src/app/components/layout/header/header.component.html 	modificado:     src/app/components/login/login.component.html 	modificado:     src/app/components/pago-cuota-alumno/pago-cuota-alumno.component.html 	modificado:     src/app/components/principal/principal.component.html

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -9,15 +9,15 @@
 
 </head>
 <body id="bglogin">
-    <header><div class="navbar navbar-default over wide-area" role="navigation"> ... </div></header> 
+    <header><div class="navbar navbar-default over wide-area" role="navigation"> </div></header> 
     <div class="container" id="fondo">
         <div class="row">
             <div class="col-12">
-                    <div style="color: #FCA311;"><a href="menuprincipal.html" style="text-decoration: none; color: #FCA311;">Pagina Principal</a> ►<a href="" style="text-decoration: none;color: #FCA311;">  Entrar al sitio</a></div>
+                    <div style="color: #FCA311;"><a [routerLink]="['home']" style="text-decoration: none; color: #FCA311;">Pagina Principal</a> ►<a href="" style="text-decoration: none;color: #FCA311;">  Entrar al sitio</a></div>
                     <br><br>
                     <h1 style="color: white; text-shadow: yellow;">Acceder</h1>
                     <br>
-                    <div class="col-5" id="login">
+                    <div class="col-5" id="login" style="margin-bottom: 60px;">
                         <form>
                             <div class="mb-3">
                               <label for="exampleInputEmail1" class="form-label">Email address</label>
