--- a/src/app/components/principal/principal.component.html
+++ b/src/app/components/principal/principal.component.html
@@ -72,7 +72,9 @@
               <a href="#" class="btn btn-primary">Ver</a>
             </div>
           </div>
-
+          <br>
+          <button type="button" class="btn btn-outline-secondary" style="margin-left: 5px; margin-right: 5px;"><a [routerLink]="['login']">Login</a></button>
+          <a [routerLink] = "['login']" >Login</a>
         </div>
       </div>
    </div>         
