modificado:     src/app/components/constancia-alumno-regular/constancia-alumno-regular.component.css 	modificado:     src/app/components/constancia-alumno-regular/constancia-alumno-regular.component.html 	modificado:     src/app/components/pago-cuota-alumno/pago-cuota-alumno.component.css 	modificado:     src/app/components/pago-cuota-alumno/pago-cuota-alumno.component.html 	modificado:     src/app/components/preceptor/preceptor.component.css 	modificado:     src/app/components/preceptor/preceptor.component.html 	modificado:     src/app/components/secretario/secretario.component.css 	modificado:     src/app/components/secretario/secretario.component.html

--- a/src/app/components/pago-cuota-alumno/pago-cuota-alumno.component.html
+++ b/src/app/components/pago-cuota-alumno/pago-cuota-alumno.component.html
@@ -27,46 +27,29 @@
                           <legend>Ingrese DNI de alumno</legend>
                           <div class="input-group mb-3">
                             <input type="text" class="form-control" aria-label="Recipient's username" aria-describedby="button-addon2">
-                            <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
+                            <button class="btn btn-outline-secondary" type="button" id="button-addon2">Buscar</button>
                           </div>
-                      </form>
-                      <table class="table">
-                        <thead class="table-dark">
-                            <td>
-                                Nombre 
-                            </td>
-                            <td>
-                                Apellido
-                            </td>
-                            <td>
-                                Curso 
-                            </td>
-                            <td>
-                                Division
-                            </td>
-                            <td>
-                                Fecha Ultima cuota pagada 
-                            </td>
-                        </thead>
-                        <tbody>
-                            <td>
-                                Juan
-                            </td>
-                            <td>
-                                Perez
-                            </td>
-                            <td>
-                                2º 
-                            </td>
-                            <td>
-                                B
-                            </td>
-                            <td>
-                               12/5/2021 
-                            </td>
-                        </tbody>
-                      </table>
-                      
+                    </form>
+                    <table class="table">
+                      <thead class="table-dark">
+                        <tr>
+                          <th scope="col">Apellido</th>
+                          <th scope="col">Nombre</th>
+                          <th scope="col">Curso</th>
+                          <th scope="col">Division</th>
+                          <th scope="col">Fecha Ultima Cuota Pagada</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td>Quiero</td>
+                          <td>Dormir</td>
+                          <td>1º</td>
+                          <td>A</td>
+                          <td>10/05/21</td>
+                        </tr>
+                      </tbody>
+                    </table>                      
                 </div>
               </div>
             </div>
@@ -124,9 +107,9 @@
                     <a href="#" class="list-group-item list-group-item-action">Generar Constancias</a>
                     <a href="#" class="list-group-item list-group-item-action active" aria-current="true">Pagos</a>
                   </div>
-                </div>
-    
             </div>
+    
+       </div>
    </div>
          
               
