--- a/src/app/components/preceptor/preceptor.component.html
+++ b/src/app/components/preceptor/preceptor.component.html
@@ -1,1 +1,12 @@
-<p>preceptor works!</p>
+
+<div class="container" >
+    <div class="row" id="contenido">
+        <h1 style="margin-bottom: 50px;"> Bienvenido "Nombre_PRECEPTOR"</h1>
+        <div class="col-10" style="margin:auto">
+            <div class="list-group">
+                <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Asistencia</a>
+                <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Constancias</a>
+            </div>
+        </div>
+    </div>
+</div>
