--- a/src/app/components/secretario/secretario.component.html
+++ b/src/app/components/secretario/secretario.component.html
@@ -1,1 +1,13 @@
-<p>secretario works!</p>
+<div class="container" >
+    <div class="row" id="contenido">
+        <h1 style="margin-bottom: 50px;"> Bienvenido "Nombre_SECRETARIO"</h1>
+        <div class="col-10" style="margin:auto">
+            <div class="list-group">
+                <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Subir Documentos</a>
+                <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Asistencia</a>
+                <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Generar Constancias</a>
+                <a [routerLink]="['pago']" class="list-group-item list-group-item-action list-group-item-dark">Pagos</a>
+            </div>
+        </div>
+    </div>
+</div>
