--- a/src/app/components/constancia-alumno-regular/constancia-alumno-regular.component.html
+++ b/src/app/components/constancia-alumno-regular/constancia-alumno-regular.component.html
@@ -22,40 +22,24 @@
                       <input type="text" class="form-control" aria-label="Recipient's username" aria-describedby="button-addon2">
                       <button class="btn btn-outline-secondary" type="button" id="button-addon2">Buscar</button>
                     </div>
-                    <table class="table" style="vertical-align: middle;">
+                    <table class="table">
                         <thead class="table-dark">
-                            <td>
-                                Nombre 
-                            </td>
-                            <td>
-                                Apellido
-                            </td>
-                            <td>
-                                Curso 
-                            </td>
-                            <td>
-                                Division
-                            </td>
-                            <td>
-                                Estado
-                            </td>
+                          <tr>
+                            <th scope="col">Apellido</th>
+                            <th scope="col">Nombre</th>
+                            <th scope="col">Curso</th>
+                            <th scope="col">Division</th>
+                            <th scope="col">Estado</th>
+                          </tr>
                         </thead>
                         <tbody>
-                            <td>
-                                Juan
-                            </td>
-                            <td>
-                                Perez
-                            </td>
-                            <td>
-                                2º 
-                            </td>
-                            <td>
-                                B
-                            </td>
-                            <td>
-                                REGULAR
-                            </td>
+                          <tr>
+                            <td>Waldo</td>
+                            <td>Perez</td>
+                            <td>1º</td>
+                            <td>A</td>
+                            <td>REGULAR</td>
+                          </tr>
                         </tbody>
                       </table>
                         <div style="text-align: center;">
