--- a/src/app/components/construccion/construccion.component.html
+++ b/src/app/components/construccion/construccion.component.html
@@ -1,1 +1,8 @@
-<p>construccion works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-12" style="text-align: center;">    
+                <img src="../../../assets/img/construccion2.jpg" alt="" style="width: 600px;">
+                <h4>Regrese al  <a [routerLink]="['home']">menu principal</a> </h4>
+        </div>
+    </div>
+</div>
