--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -2,7 +2,9 @@
     <div class="container-fluid" >
       <a class="navbar-brand" href="#"><img src="../../../../assets/img/graduation-hat.png" alt="" style="height: 30px;"> Colegio IPSEL<i class="fas fa-graduation-cap"></i></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"><a [routerLink]="['home']"></a></span>
       </button>   
     </div>
+
+    <a [routerLink]="['pago']">Acerca de</a>
 </nav>
