modificado:     src/app/app-routing.module.ts 	modificado:     src/app/components/layout/header/header.component.html

--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -6,5 +6,7 @@
       </button>   
     </div>
 
-    <a [routerLink]="['pago']">Acerca de</a>
+    <a [routerLink]="['pago']">Pago</a>
+    <a [routerLink]="['preceptor']">Preceptor</a>
+    <a [routerLink]="['secretario']">Secretario</a>
 </nav>
