--- a/src/app/components/pago-cuota-alumno/pago-cuota-alumno.component.html
+++ b/src/app/components/pago-cuota-alumno/pago-cuota-alumno.component.html
@@ -26,7 +26,7 @@
                         
                           <legend>Ingrese DNI de alumno</legend>
                           <div class="input-group mb-3">
-                            <input type="text" class="form-control" aria-label="Recipient's username" aria-describedby="button-addon2" [(ngModel)]="dniBusqueda">
+                            <input type="text" class="form-control" aria-label="Recipient's username" aria-describedby="button-addon2" name="dniBusqueda" [(ngModel)]="dniBusqueda" value="Otto" required>
                             <button class="btn btn-outline-secondary" type="button" id="button-addon2" (click)="buscarPorDni()">Buscar</button>
                           </div>
                     </form>
@@ -66,7 +66,7 @@
                           <legend>Formulario de pago</legend>
                           <div class="mb-3">
                             <label for="disabledTextInput" class="form-label">Dni del alumno</label>
-                            <input type="text" id="disabledTextInput" class="form-control" placeholder="Disabled input" [(ngModel)]="dniPago">
+                            <input type="text" id="disabledTextInput" class="form-control" placeholder="Disabled input" name="dniPago" [(ngModel)]="dniPago" value="Otto" required>
                           </div>
                           <div class="mb-3">
                             <label for="disabledSelect" class="form-label">Metodo de Pago</label>
@@ -78,7 +78,7 @@
                           </div>
                           <div class="mb-3">
                             <label for="disabledSelect" class="form-label">Cuotas Pagadas</label>
-                            <select id="disabledSelect" class="form-select" [(ngModel)]="cuotasPagadas">
+                            <select id="disabledSelect" class="form-select" name="cuotasPagadas" [(ngModel)]="cuotasPagadas">
                               <option>1</option>
                               <option>2</option>
                               <option>3</option>
