--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -10,6 +10,19 @@
           <a class="nav-link active" aria-current="page" [routerLink]="['']">Home</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link active" aria-current="page"  [routerLink]="['pago']">Pagos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page"  [routerLink]="['usuario']">Cuentas</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" [routerLink]="['constancia']">Constacias</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" [routerLink]="['construccion']">Documentos</a>
+        </li>
+<!--      
+        <li class="nav-item">
           <a class="nav-link" [routerLink]="['login']" >Login</a>
         </li>
         <li class="nav-item dropdown">
@@ -33,8 +46,8 @@
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" [routerLink]="['construccion']">Something else here</a></li>
           </ul>
-        </li>
-      </ul>
+        </li>-->
+      </ul>   
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
