--- a/src/app/components/pago-cuota-alumno/pago-cuota-alumno.component.html
+++ b/src/app/components/pago-cuota-alumno/pago-cuota-alumno.component.html
@@ -21,7 +21,7 @@
           <legend>Ingrese DNI de alumno</legend>
           <div class="input-group mb-3">
             <input type="text" class="form-control" aria-label="Recipient's username" aria-describedby="button-addon2"
-              name="dniBusqueda" [(ngModel)]="dniBusqueda" value="Otto" required>
+              name="dniBusqueda" [(ngModel)]="dniBusqueda" value="0" required>
             <button class="btn btn-outline-secondary" type="button" id="button-addon2"
               (click)="buscarPorDni()">Buscar</button>
           </div>
